This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
11/12/20: Added property to add some text after "SerialEM" in the title bar.

11/12/20: Added hot keys to toggle "Extra info" and crosshairs in the
display.

11/12/20: Added ability to select scripts to run at program startup and exit.

11/12/20: SEM_3-8-4
11/12/20: Fixed installer to copy SEMCCD-GMS3.01-64.dll for GMS 3.0 - 3.2
(In 3.8).

11/12/20: Set the default for LowestGainIndex to 2 for XF416 (In 3.8).

11/11/20: Add script commands to add, subtract, multiply and divide two images
and to scale the values in an image; changed FilterImage to place the output
in A or in a specified buffer.

11/11/20: Made it possible to use an autofocus calibration in LM.

11/10/20: Added script command to set tilt axis offset.

11/10/20: Added capability to define dialog and menu items to hide or disable
unconditionally and also to define a selectable "basic mode" with a list of
items to hide or disable.

11/10/20: Made it possible to set Administrator mode to -1 to prevent people
from saving calibrations.

11/6/20: Made install script kill DigitalMicrograph if necessary (In 3.8).

11/6/20: Prevented shutter dead time calibration for direct detectors
(In 3.8).

11/3/20: Added property to skip the check of neutral IS values on a JEOL
(In 3.8).

11/2/20: Changed cosine power specification in the tilt series setup dialog to
be expressed in terms of increase in exposure from 0 to 60 degrees.

11/2/20: Added properties to control tilt range and increment of the fine
eucenticity task.

11/1/20: Fixed crash when autocentering beam and fixed focus problems with
autocenter setup dialog (In 3.8).

10/28/20: Added property to get means of a subarea during the fine
eucentricity routine.
