@@ -391,6 +391,8 @@ public:
   afx_msg void OnOptionsSearchPlusMinus();
   afx_msg void OnUpdateOptionsSearchPlusMinus(CCmdUI *pCmdUI);
   afx_msg void OnMarkerToCenter();
+  afx_msg void OnUseItemLabelsInFilenames();
+  afx_msg void OnUpdateUseItemLabelsInFilenames(CCmdUI *pCmdUI);
 };
 
 /////////////////////////////////////////////////////////////////////////////
