@@ -127,6 +127,7 @@ BOOL_SETT_GETSET("WriteNavAsXML", mWinApp->mNavHelper->, WriteNavAsXML)
 BOOL_SETT_GETSET("TryRealignScaling", mWinApp->mNavHelper->, TryRealignScaling)
 BOOL_SETT_GETSET("PlusMinusRIScaling", mWinApp->mNavHelper->, PlusMinusRIScaling)
 INT_SETT_GETSET("PointLabelDrawThresh", mWinApp->mNavHelper->, PointLabelDrawThresh)
+INT_SETT_GETSET("UseLabelInFilenames", mWinApp->mNavHelper->, UseLabelInFilenames)
 INT_SETT_GETSET("MultiShotEnable", mWinApp->mNavHelper->, EnableMultiShot)
 BOOL_SETT_GETSET("RotAlignDoSearch", mWinApp->mNavHelper->, SearchRotAlign)
 FLOAT_SETT_GETSET("RotAlignRange", mWinApp->mNavHelper->, RotAlignRange)
