@@ -1461,8 +1461,8 @@
         <TR>
           <TD class="scriptcommand">DoesFileExist file</TD>
           <TD>Reports if <b>file</b> exists in the current working directory
-          if the name includes no path, or at the indicated path if includes a
-          path.&nbsp; Command added in 3.9, 11/8/20.</TD>
+          if the name includes no path, or at the indicated path if it includes a
+          path.&nbsp; <b>file</b> can be a directory.&nbsp; Command added in 3.9, 11/8/20.</TD>
         </TR>
         <TR>
           <TD class="scriptcommand">AllowFileOverwrite #</TD>
